# sieve

./: .env.example  .gitignore  DECISIONS.md  README.md  TODO.md
docker/: docker-compose.yml
docs/: architecture.md  setup.md
kotlin-pipeline/: build.gradle.kts  settings.gradle.kts
kotlin-pipeline/src/main/kotlin/com/sieve/: Main.kt
python-scrapers/: README.md  pyproject.toml
python-scrapers/sieve_scrapers/: __init__.py
python-scrapers/sieve_scrapers/models/: __init__.py
python-scrapers/sieve_scrapers/scrapers/: __init__.py
